# order-book-adapter

./: .gitignore  Cargo.toml  README.md
crates/oba-cli/: Cargo.toml
crates/oba-cli/src/: best_ask.rs  best_bid.rs  cli.rs  get_order_book.rs  main.rs  subscribe.rs  unsubscribe.rs
crates/oba-client/: Cargo.toml
crates/oba-client/examples/: get_order_book.rs  subscribe.rs  unsubscribe.rs
crates/oba-client/src/: client.rs  lib.rs  models.rs
crates/oba-server/: Cargo.toml
crates/oba-server/src/: config.rs  main.rs  routes.rs
crates/oba-server/src/bitstamp/: instrument_order_provider.rs  mod.rs  models.rs
crates/oba-server/src/domain/: mod.rs  models.rs  order_book_manager.rs
crates/oba-server/src/domain/models/: orderbook.rs
crates/oba-server/src/handlers/: instruments.rs  mod.rs
crates/oba-server/src/handlers/instruments/: get_order_book.rs  mod.rs  subscribe_instrument.rs  unsubscribe_instrument.rs
