[workspace]

members = [
  "crates/*"
]
resolver = "2"


[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5"}
futures-util = "0.3.30" 
reqwest = { version = "0.12.5", features = ["json"]}
url = "2.5.2"
thiserror = "1.0.61"

dotenvy = "0.15.7"

# Logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing = "0.1.40"

# Serialization/Deserializtion
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
serde_with = "3.8.3"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }

