[package]
name = "oba-client"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
reqwest.workspace = true
url.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_with.workspace = true

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"


[[example]]
name = "unsubscribe"
path = "examples/unsubscribe.rs"

[[example]]
name = "get-order-book"
path = "examples/get_order_book.rs"


