[package]
name = "oba-server"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]

# Async 
tokio.workspace = true
axum.workspace = true

dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Serialization / Deserialization
serde.workspace = true
serde_json.workspace = true

